syntax = "proto3";

package conveyor_etl.registry;

import "common.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

service ServiceRegistry {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Deregister(DeregisterRequest) returns (DeregisterResponse);
  rpc Heartbeat(stream HeartbeatRequest) returns (stream HeartbeatResponse);
  rpc ListServices(ListServicesRequest) returns (ListServicesResponse);
  rpc WatchServices(WatchServicesRequest) returns (stream ServiceEvent);
  rpc GetServiceEndpoints(GetServiceEndpointsRequest) returns (GetServiceEndpointsResponse);
  rpc JoinGroup(JoinGroupRequest) returns (JoinGroupResponse);
  rpc LeaveGroup(LeaveGroupRequest) returns (LeaveGroupResponse);
}

message RegisterRequest {
  conveyor_etl.common.ServiceIdentity identity = 1;
  conveyor_etl.common.Endpoint endpoint = 2;
  ServiceMetadata metadata = 3;
  google.protobuf.Duration heartbeat_interval = 4;
  string sidecar_id = 10;
}

message ServiceMetadata {
  map<string, string> labels = 1;
  repeated string record_types_handled = 2;
  uint32 max_concurrent_requests = 3;
  uint32 weight = 4;
}

message RegisterResponse {
  bool success = 1;
  string registration_id = 2;
  string lease_id = 3;
  google.protobuf.Duration lease_ttl = 4;
  uint64 initial_credits = 5;
}

message DeregisterRequest {
  string service_id = 1;
  string registration_id = 2;
  bool graceful = 3;
  google.protobuf.Duration drain_timeout = 4;
}

message DeregisterResponse {
  bool success = 1;
  uint64 pending_records = 2;
}

message HeartbeatRequest {
  string service_id = 1;
  string registration_id = 2;
  ServiceHealth health = 3;
  ServiceLoad load = 4;
}

message ServiceHealth {
  conveyor_etl.common.HealthStatus status = 1;
  string message = 2;
  map<string, ComponentHealth> components = 3;
}

message ComponentHealth {
  string name = 1;
  conveyor_etl.common.HealthStatus status = 2;
  string message = 3;
}

message ServiceLoad {
  float cpu_usage = 1;
  float memory_usage = 2;
  uint64 active_requests = 3;
  uint64 queue_depth = 4;
  float avg_latency_ms = 5;
}

message HeartbeatResponse {
  bool acknowledged = 1;
  google.protobuf.Duration next_heartbeat_deadline = 2;
  repeated RouterCommand commands = 3;
}

message RouterCommand {
  oneof command {
    DrainCommand drain = 1;
    ResumeCommand resume = 2;
    ConfigUpdate config = 3;
    RevokePartitions revoke = 4;
    AssignPartitions assign = 5;
  }
}

message DrainCommand {
  string reason = 1;
  google.protobuf.Duration timeout = 2;
}

message ResumeCommand {}

message ConfigUpdate {
  map<string, string> config = 1;
}

message RevokePartitions {
  string group_id = 1;
  repeated uint32 partitions = 2;
  uint64 generation = 3;
}

message AssignPartitions {
  string group_id = 1;
  repeated uint32 partitions = 2;
  uint64 generation = 3;
}

message ListServicesRequest {
  conveyor_etl.common.ServiceType type_filter = 1;
  map<string, string> label_selector = 2;
  bool include_unhealthy = 3;
}

message ListServicesResponse {
  repeated RegisteredService services = 1;
}

message RegisteredService {
  conveyor_etl.common.ServiceIdentity identity = 1;
  conveyor_etl.common.Endpoint endpoint = 2;
  ServiceMetadata metadata = 3;
  ServiceHealth health = 4;
  google.protobuf.Timestamp registered_at = 5;
  google.protobuf.Timestamp last_heartbeat = 6;
  repeated uint32 assigned_partitions = 7;
}

message WatchServicesRequest {
  conveyor_etl.common.ServiceType type_filter = 1;
  map<string, string> label_selector = 2;
}

message ServiceEvent {
  EventType event_type = 1;
  RegisteredService service = 2;
}

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_ADDED = 1;
  EVENT_TYPE_MODIFIED = 2;
  EVENT_TYPE_REMOVED = 3;
  EVENT_TYPE_HEALTH_CHANGED = 4;
  EVENT_TYPE_PARTITIONS_ASSIGNED = 5;
  EVENT_TYPE_PARTITIONS_REVOKED = 6;
}

message GetServiceEndpointsRequest {
  string service_name = 1;
  conveyor_etl.common.ServiceType service_type = 2;
  string group_id = 3;
}

message GetServiceEndpointsResponse {
  repeated EndpointInfo endpoints = 1;
}

message EndpointInfo {
  string service_id = 1;
  conveyor_etl.common.Endpoint endpoint = 2;
  uint32 weight = 3;
  conveyor_etl.common.HealthStatus health = 4;
  repeated uint32 assigned_partitions = 5;
}

message JoinGroupRequest {
  string service_id = 1;
  string group_id = 2;
  string stage_id = 3;
  repeated uint32 partition_preferences = 4;
}

message JoinGroupResponse {
  bool success = 1;
  uint64 generation = 2;
  repeated uint32 assigned_partitions = 3;
}

message LeaveGroupRequest {
  string service_id = 1;
  string group_id = 2;
  bool graceful = 3;
}

message LeaveGroupResponse {
  bool success = 1;
}
